--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  *{
+    margin: 0;
+    padding: 0;
+  }
+
+  body{
+    @apply text-[1.25rem] font-semibold;
+    font-family: Inter, Helvetica, sans-serif;
+  }
+
+  h1{
+    @apply text-[4rem] font-bold ;
+  }
+
+  h2{
+    @apply text-4xl font-bold ;
+  }
+
+  .is-active {
+    @apply text-appskep-primary bg-[#e4e6ef];
+  }
+
+} 
