--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
   }
 
   h1{
-    @apply text-[4rem] font-bold ;
+    @apply text-[4rem] font-bold text-appskep-black;
   }
 
   h2{
-    @apply text-4xl font-bold ;
+    @apply text-4xl font-bold text-appskep-dark;
   }
 
   .is-active {
