--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@
   }
 
   body{
-    @apply text-[1.25rem] font-semibold;
+    @apply text-[1.25rem] font-normal scroll-smooth;
     font-family: "Geologica", sans-serif;
+    scroll-padding-top: 200px;
   }
 
   h1{
