--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
     padding: 0;
   }
 
+  html{
+    @apply !scroll-smooth;
+  }
+
   body{
     @apply text-[1.25rem] font-normal scroll-smooth;
     font-family: "Geologica", sans-serif;
