add form validation, send form value throught wa-api and finish project

--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,23 @@
   }
 
   .forms{
-    @apply text-[12px] flex flex-col gap-0 ;
+    @apply text-[12px] flex flex-col gap-0;
 
   }
 
-  .forms .form-group{
+ .form-group{
     @apply bg-appskep-secondary/20 text-appskep-secondary/50 rounded-xl px-5 py-3 focus:border-2 focus:text-appskep-secondary;
+  }
+
+  form {
+    @apply text-[12px] flex flex-col gap-0;
+  }
+
+  form .form-control {
+  }
+
+  form .form-control input, textarea, select {
+    @apply w-full px-[0.7rem] py-[0.5rem] bg-appskep-secondary/20 text-appskep-secondary/50 rounded-xl px-5 py-3 focus:border-2 focus:text-appskep-secondary;
   }
 
 } 
