--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,16 @@
   }
 
   body{
-    @apply text-[1.25rem] font-normal scroll-smooth;
+    @apply text-[14px] sm:text-[1rem] md:text-[1.25rem] font-normal scroll-smooth;
     font-family: "Geologica", sans-serif;
-    scroll-padding-top: 200px;
   }
 
   h1{
-    @apply text-[4rem] font-bold text-appskep-black;
+    @apply text-[2.5rem] md:text-[3rem] lg:text-[4rem] xl:text-[3rem] font-bold text-appskep-black;
   }
 
   h2{
-    @apply text-4xl font-bold;
+    @apply text-2xl sm:text-3xl md:text-4xl font-bold;
   }
 
   .is-active {
